adding configs/secrets

--- a/rsvpapp/rsvp-web.yaml
+++ b/rsvpapp/rsvp-web.yaml
@@ -15,6 +15,21 @@ spec:
         env:
         - name: MONGODB_HOST
           value: mongodb
+        - name: TEXT1
+          valueFrom:
+            configMapKeyRef:
+              name: customer1
+              key: TEXT1
+        - name: TEXT2
+          valueFrom:
+            configMapKeyRef:
+              name: customer1
+              key: TEXT2
+        - name: COMPANY
+          valueFrom:
+            configMapKeyRef:
+              name: customer1
+              key: COMPANY
         ports:
         - containerPort: 5000
           name: web-port
